# grading_project

./: .gitignore  LICENSE  config.py  pyproject.toml  run.py
grader_app/: __init__.py  utils.py
grader_app/code_grader/: routes.py  utils.py
grader_app/main/: routes.py
grader_app/pdf_grader/: routes.py  utils.py
grader_app/pdf_grader/static/pdf_grader/css/: report_overview.css  report_status.css  viewer.css
grader_app/pdf_grader/static/pdf_grader/js/: report_overview.js  viewer.js
grader_app/pdf_grader/templates/pdf_grader/: attendance_overview.html  images.html  report_overview.html  report_status.html  reportlist.html  viewer.html
grader_app/static/: style.css
grader_app/static/css/: edit_problems.css  style.css
grader_app/static/js/: edit_problems.js  reportlist.js  studentlist.js  viewer.js
grader_app/templates/: authorlist.html  base.html  dirlist.html  edit_problems.html  index.html  reportlist_base.html  studentlist.html  viewer_base.html
