[project]
name = "check-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chardet>=5.2.0",
    "flask>=3.1.1",
    "ipykernel>=6.30.1",
    "pandas>=3.0.0",
    "pdf2image>=1.17.0",
    "pypdf2>=3.0.1",
    "xlrd>=2.0.2",
]
